--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,3 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
+{ "version": 2,
+"builds":[{"src":"./server.js", "use":"@vercel/node"}],
+"routes": [{ "src": "/(.*)", "dest": "/api" }] }
